Mon Sep 12 10:20:28 CEST 2011
	Releasing libmicrohttpd 0.9.14. -CG

Mon Sep 12 10:05:36 CEST 2011
	Added new function to allow setting of a custom timeout value
	for an individual connection (the MHD_set_connection_option is
	more generic, but this is currently the only use). -CG

Sat Sep 10 07:30:12 CEST 2011
	Documenting that MHD_CONNECTION_INFO_GNUTLS_CLIENT_CERT is not
	implemented and will not be implemented, and what to use instead. -CG

Fri Sep  9 13:42:20 CEST 2011
	Added testcase to demonstrate that response cleanup calling is
	working. No bug was found. -CG

Thu Aug 18 11:05:16 CEST 2011
	Fixed bug with wrong state transition if callback returned
	MHD_CONTENT_READER_END_OF_STREAM causing spurious extra callbacks
	to the handler (thanks to Jan Seeger for pointing it out). -CG/JS

Thu Aug 11 11:40:03 CEST 2011
	Changing sockets to be non-blocking as suggested by Eivind Sarto
	on the mailinglist. -CG

Mon Jul 25 16:13:15 CEST 2011
	Added a logo. -CG

Sat Jul 16 22:42:10 CEST 2011
	Change type of nonce to 'unsigned long int' to match return type
	from 'strtoul'.  Fixes ERANGE check which would have previously
	failed. -CG

Wed Jul 13 09:26:17 CEST 2011
	Fixing HTTP error status strings for certain high-numbered status codes.
	Added support for some more (non-standard) status codes.
	Releasing libmicrohttpd 0.9.13. -CG

Thu Jul  7 10:24:20 CEST 2011
	Adding performance measurements. -CG

Thu Jun 23 14:21:13 CEST 2011
	Releasing libmicrohttpd 0.9.12. -CG

Wed Jun 22 14:32:23 CEST 2011
	Force closing connection if either the client asked it or
	if the response contains 'Connection: close' (so far,
	only the client's request was considered). -CG/RV

Wed Jun 22 10:37:35 CEST 2011
	Removing listen socket from poll/select sets in
	MHD_USE_THREAD_PER_CONNECTION mode; using 'shutdown'
	on connection sockets to signal termination instead. -CG

Wed Jun 22 10:25:13 CEST 2011
	Eliminate unnecessary (and badly synchronized) calls to